fix resize flickering when showing search

--- a/app/assets/app/elements/search/_search.scss
+++ b/app/assets/app/elements/search/_search.scss
@@ -26,7 +26,7 @@
             line-height: 30px;
         }
         background: #eee;
-        width: 200px;
+        width: 220px;
         height: 100%;
         padding: 10px;
         border-bottom-left-radius: 10px;
